--- a/web/templates/event/event_form.html
+++ b/web/templates/event/event_form.html
@@ -28,6 +28,7 @@
                     {{ form.start_date_time.label_tag }} {{ form.start_date_time }}
                     {{ form.event_for.label_tag }} {{ form.event_for }}
                     {{ form.description.label_tag }} {{ form.description }}
+                    {{ form.status.label_tag }} {{ form.status }}
                 </div>
                 <div class="col-md-6">
                     {{ form.category.label_tag }} {{ form.category }}
