--- a/web/templates/user/pending_users.html
+++ b/web/templates/user/pending_users.html
@@ -39,7 +39,11 @@ All Users
                             {% if request.user.user_type == 'manager' %}
                             <td>
                                 <p>
-                                    <a href="" class="btn btn-primary">Edit</a>
+                                    <form method="post" action="{% url 'confirm_user' user.pk %}">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="user_id" value="{{ user.pk }}">
+                                        <button type="submit" class="btn btn-outline-success">Approve</button>
+                                    </form>
                                     <a href="" class="btn btn-danger">Delete</a>
                                 </p>
                             </td>
