--- a/web/templates/event/participating_events.html
+++ b/web/templates/event/participating_events.html
@@ -42,6 +42,8 @@
                                 <a href="{% url 'event_detail' event.pk %}" class="btn btn-sm btn-primary">View</a>
                                 {% if event.status != 'completed' %}
                                 <a href="{% url 'event_unparticipate' event.pk %}" class="btn btn-sm btn-danger">Withdraw</a>
+                                {% elif event.status == 'completed' %}
+                                <a href="{% url 'event_rate' event.pk %}" class="btn btn-sm btn-info"><i class='bx bxs-star'></i> Rate it</a> 
                                 {% endif %}
                             </td>
                         </tr>
